# bao

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RULES.md
.github/workflows/: ci.yml
bindings/py/: Cargo.toml  pyproject.toml
bindings/py/src/: lib.rs
bindings/wasm/: Cargo.toml  package.json
bindings/wasm/src/: lib.rs
crates/bao-engine/: Cargo.toml
crates/bao-engine/examples/: arena_vs_random.rs  generate_positions.rs  label_throughput.rs  nnue_nps.rs  nps_bench.rs  search_debug.rs
crates/bao-engine/src/: board.rs  events.rs  features.rs  lib.rs  mcts.rs  moves.rs  notation.rs  rules.rs  shard.rs  variant.rs  zobrist.rs
crates/bao-engine/src/eval/: heuristic.rs  mod.rs
crates/bao-engine/src/eval/nnue/: loader.rs  mod.rs  transformer.rs
crates/bao-engine/src/search/: alphabeta.rs  mod.rs  tt.rs
docs/: architecture.md  ban.md  feature_layout.md  nnue_format.md  shard_format.md  training_guide.md
docs/rules-sources/: README.md  abstractstrategygames.md  geziefer_bga.md  kibao_org.md  mancala_world_wiki.md  medium_polovynka.md  wikipedia.md
scripts/: bootstrap-vps.sh
training/: pyproject.toml
training/bao_train/: __init__.py
training/bao_train/nnue/: __init__.py  architecture.py  dataset.py  export.py  features.py  quantised_forward.py  train.py  transformer.py
training/scripts/: arena_nnue_vs_heuristic.py  arena_nnue_vs_nnue.py  check_drift.py  eval_sanity.py  export_checkpoint.py  heuristic_vs_random.py  smoke_train.py
training/tests/: test_nnue_roundtrip.py  test_nnue_transformer.py  test_shard_roundtrip.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  engine.ts  i18n.ts  main.tsx  persistence.ts  sound.ts
ui/src/components/: AdvantageBar.tsx  Board.tsx  MoveHistory.tsx  StatusBar.tsx  SubstatePrompt.tsx
ui/src/hooks/: useAIPlayer.ts  useAnimationDriver.ts  useOrientation.ts
ui/src/store/: gameStore.ts  opponentStore.ts
ui/src/styles/: app.css
