[workspace]
resolver = "2"
members = [
    "crates/bao-engine",
    "bindings/py",
    "bindings/wasm",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "TBD"
repository = "https://github.com/vdeb27/bao"

[workspace.dependencies]
bao-engine = { path = "crates/bao-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
lto = "thin"
codegen-units = 1
