[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "bao-engine-py"
version = "0.0.1"
description = "PyO3 bindings for bao-engine"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bao_engine_py"
manifest-path = "Cargo.toml"
