[package]
name = "bao-engine"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bao la Kiswahili rules engine and MCTS core."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1"

[lib]
name = "bao_engine"
path = "src/lib.rs"
