[package]
name = "bao-engine"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bao la Kiswahili rules engine and MCTS core."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# proptest will be re-added when property-based tests are introduced; pin
# carefully — proptest 1.5+ pulls a getrandom that requires edition2024.

[lib]
name = "bao_engine"
path = "src/lib.rs"
